# one-publish

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.updater.example.json
src-tauri/.omc/state/: idle-notif-cooldown.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command_parser.rs  commands.rs  compiler.rs  config_export.rs  contracts.rs  errors.rs  lib.rs  main.rs  parameter.rs  plan.rs  process_utils.rs  publish.rs  security.rs  shortcuts.rs  spec.rs  store.rs  tray.rs
src-tauri/src/artifact/: mod.rs
src-tauri/src/commands/: artifact.rs  config.rs  environment.rs  export.rs  middleware.rs  mod.rs  notification.rs  provider.rs  repository.rs  updater.rs
src-tauri/src/commands/export/: mod.rs
src-tauri/src/commands/publish/: access.rs  contracts.rs  errors.rs  execution.rs  logs.rs  mod.rs  output.rs  output_policy.rs  (+3 more)
src-tauri/src/environment/: cargo_provider.rs  dotnet_provider.rs  go_provider.rs  java_provider.rs  mod.rs  types.rs
src-tauri/src/output_target/: mod.rs  mount.rs  scheme.rs  unc.rs
src-tauri/src/provider/: mod.rs  registry.rs
src-tauri/src/store/: commands.rs  migration.rs  persistence.rs  recent.rs  runtime.rs  tests.rs  types.rs
src-tauri/tests/: preflight_access.rs  provider_and_spec.rs  publish_roundtrip.rs
(+631 files in other folders)
