[package]
name = "one-publish"
version = "1.0.0"
description = "Cross-platform .NET publish tool with GUI"
authors = [""]
license = "MIT"
edition = "2021"
rust-version = "1.77.0"

[lib]
name = "one_publish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = ["protocol-asset", "tray-icon", "image-png"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
dirs = "5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }
thiserror = "2.0"
anyhow = "1.0"
glob = "0.3"
open = "5.0"
walkdir = "2.5"
zip = "7.3"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"
